# ArmyFitnessTestRecorder

./: .gitignore  README.md  flutter_launcher_icons.yaml  local.properties  pubspec.yaml  settings.gradle
.dig/web/: analyzed.js
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/profile/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ABCPChart.html  ACFTChart.html  License.html
app/src/main/cpp/: CMakeLists.txt  abcp-lib.c  acft-lib.c  apft-lib.c
app/src/main/res/color/: bottom_nav_color.xml  image_button.xml
app/src/main/res/drawable/: ic_abcp.xml  ic_acft.xml  ic_add.xml  ic_apft.xml  ic_back.xml  ic_calendar.xml  ic_dashboard_black_24dp.xml  ic_delete.xml  ic_email.xml  ic_history.xml  ic_home_black_24dp.xml  ic_import.xml  ic_info.xml  ic_launcher_foreground.xml  ic_log.xml  ic_menu_hamburger.xml  ic_more.xml  ic_notification.xml  ic_playstore.xml  ic_remove.xml  ic_save.xml  ic_settings.xml  ic_share.xml  ic_table_chart.xml
app/src/main/res/layout/: activity_acft_scale.xml  activity_main.xml  activity_scale_chart.xml  activity_webview.xml  durationpick.xml  fragment_abcp.xml  fragment_acft.xml  fragment_apft.xml  fragment_log.xml  fragment_more.xml  layout_container_log.xml  layout_event_duration.xml  layout_license.xml  layout_mos_chart.xml  nav_header_main.xml  (+13 more)
assets/: APFTChart.html  License.html
gradle/wrapper/: gradle-wrapper.properties
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: abcp.dart  abcp_page.dart  acft.dart  acft_page.dart  apft.dart  apft_page.dart  count_event.dart  count_item.dart  duration.dart  duration_event.dart  group.dart  log_page.dart  main.dart  record.dart  webview_page.dart
test/: widget_test.dart
(+167 files in other folders)
